don't truncate tile titles on hover - fixes #8

--- a/sass/components/_tiles.scss
+++ b/sass/components/_tiles.scss
@@ -2,11 +2,14 @@
 /// A square block with a translucent heading over it.
 
 @mixin tile {
+  display: block;
   position: relative;
   width: 11.75em;
+  height: 11.75em;
 
   @include breakpoint($tablet) {
     width: 13.75em;
+    height: 13.75em;
   }
 
   .overlay-text {
@@ -22,17 +25,37 @@
     text-align: center;
     z-index: 1;
     transition: top 0.25s;
+
+    .views-field {
+      @include element-invisible;
+
+      margin: 1.5em 0;
+      padding: 0 1em;
+    }
   }
 
   h2 {
+    height: 2.4em;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
     font-weight: normal;
     font-size: 1.1em;
   }
 
   &:hover,
-  &.has-focus {
+  &:focus {
     .overlay-text {
       top: 0;
+
+      .views-field {
+        @include element-invisible-off;
+      }
+    }
+    
+    h2 {
+      height: auto;
+      margin-top: 1em;
     }
   }
 }
@@ -56,52 +79,5 @@
 /// A square block with a translucent heading over it.
 
 .tiles-view-tile {
-  display: block;
-  position: relative;
-  width: 11.75em;
-  height: 11.75em;
-  
-  @include breakpoint($tablet) {
-    width: 13.75em;
-    height: 13.75em;
-  }
-
-  .overlay-text {
-    position: absolute;
-    top: 75%;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    background: $grey-translucent;
-    color: $white;
-    margin: 0;
-    padding: .25em;
-    text-align: center;
-    z-index: 1;
-    transition: top 0.25s;
-    
-    .views-field {
-      @include element-invisible;
-      
-      margin: .5em 0;
-    }
-  }
-
-  h2 {
-    margin: 0;
-    padding: 0;
-    font-weight: normal;
-    font-size: 1.1em;
-  }
-
-  &:hover,
-  &.has-focus {
-    .overlay-text {
-      top: 0;
-
-      .views-field {
-        @include element-invisible-off;
-      }
-    }
-  }
+  @include tile;
 }
